--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,5 +3,12 @@
 {% block content %}
 
 <h1>HomePage Template - Base</h1>
+<div>
+    <ul>
+        {% for room in rooms %}
+            <li><a href="{% url 'room' room.id %}">{{room.name}}</a></li>
+        {% endfor%}
+    </ul>
+</div>
 
 {% endblock %}
