--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -2,14 +2,8 @@
 
 {% block content %}
 
-<h1>Room Template</h1>
+<h1>{{ room.name }}</h1>
 
-<div>
-    <ul>
-        {% for room in rooms %}
-            <li>{{room.name}}</li>
-        {% endfor%}
-    </ul>
-</div>
+
 
 {% endblock %}
