--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,11 +4,14 @@
 
 <h1>HomePage Template - Base</h1>
 <div>
-    <ul>
         {% for room in rooms %}
-            <li><a href="{% url 'room' room.id %}">{{room.name}}</a></li>
+            <div>
+                <span>@{{room.host.username}}</span>
+                <p><a href="{% url 'room' room.id %}">{{room.name}}</a></p>
+                <small>{{room.topic.name}}</small>
+            </div>
+            <hr>
         {% endfor%}
-    </ul>
 </div>
 
 {% endblock %}
