added link for create room page

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <h1>HomePage Template - Base</h1>
+<a href="{% url 'create-room' %}">Create Room</a>
 <div>
         {% for room in rooms %}
             <div>
