--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -1,12 +1,12 @@
-{% extends main.html %}
+{% extends "main.html" %}
 
 {% block content %}
 
     <div>
         <form method="POST" action="">
             {% csrf_token %}
-            
-            <input type="submit" value="submit">
+            {{form.as_p}}
+            <input type="submit" value="Submit">
         </form>
     </div>
 
