feat: add delete page and search box

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,2 +1,5 @@
-<h1>Logo</h1>
+<h1>StudyRoom</h1>
+<form method="GET" action={% url 'home' %}>
+    <input type="text" name="q" placeholder="Search"/>
+</form>
 <hr>
