--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -2,17 +2,40 @@
 
 {% block content %}
 
-<h1>HomePage Template - Base</h1>
-<a href="{% url 'create-room' %}">Create Room</a>
-<div>
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
+
+<div class="home-container">
+    <div>
+        <h3>Browse Topics</h3>
+        <hr>
+        <p><a href="{% url 'home' %}">All</a></p>
+
+        {% for topic in topics %}
+            <p><a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a></p>
+        {% endfor %}
+    </div>
+    <div>
+        <h5>{{rooms_count}} rooms available</h5>
+        <a href="{% url 'create-room' %}">Create Room</a>
         {% for room in rooms %}
             <div>
                 <span>@{{room.host.username}}</span>
-                <p><a href="{% url 'room' room.id %}">{{room.name}}</a></p>
+
+                <p>
+                    <a href="{% url 'update-room' room.id %}">Edit</a> | <a href="{% url 'delete-room' room.id %}">Delete</a>
+                </p>
+                <p>
+                    <a href="{% url 'room' room.id %}">{{room.name}}</a
+                ></p>
                 <small>{{room.topic.name}}</small>
             </div>
             <hr>
-        {% endfor%}
+        {% endfor %}
+    </div>
 </div>
-
 {% endblock %}
