add restriction to other user to edit and delete

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -27,7 +27,10 @@
                 <span>@{{room.host.username}}</span>
 
                 <p>
-                    <a href="{% url 'update-room' room.id %}">Edit</a> | <a href="{% url 'delete-room' room.id %}">Delete</a>
+                    {% if request.user == room.host %}
+                    <a href="{% url 'update-room' room.id %}">Edit</a> | 
+                    <a href="{% url 'delete-room' room.id %}">Delete</a>
+                    {% endif %}
                 </p>
                 <p>
                     <a href="{% url 'room' room.id %}">{{room.name}}</a
