--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,4 +2,9 @@
 <form method="GET" action={% url 'home' %}>
     <input type="text" name="q" placeholder="Search"/>
 </form>
+{% if request.user.is_authenticated %}
+<a href={% url 'logout' %}>Logout</a>
+{% else %}
+<a href={% url 'login' %}>Login</a>
+{% endif %}
 <hr>
