--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -8,6 +8,8 @@
     {% endfor %}
 </ul>
 {% endif %}
+
+{% if page == 'login' %}
 <div>
     <form method="POST" action="">
         {% csrf_token %}
@@ -19,8 +21,22 @@
 
         <input type="submit" value="Login">
 
-
     </form>
-</div>
+    <p>haven't signed up yet?</p>
 
+    <a href="{% url 'register' %}">Sign up</a>
+
+</div>
+{% else %}
+<div>
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Register">
+    </form>
+
+    <p>already signed up yet?</p>
+    <a href="{% url 'login' %}">Login</a>
+</div>
+{% endif %}
 {% endblock content %}
