--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,6 +3,7 @@
     <input type="text" name="q" placeholder="Search"/>
 </form>
 {% if request.user.is_authenticated %}
+<p>Hello {{request.user}}</p>
 <a href={% url 'logout' %}>Logout</a>
 {% else %}
 <a href={% url 'login' %}>Login</a>
