--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,19 +1,53 @@
-{% extends "main.html" %}
+{% extends "main.html" %} {% block content %}
+<style>
+  .room-container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+  }
+</style>
 
-{% block content %}
+<div class="room-container">
+  <div>
+    <p>@{{ room.host }}</p>
+    <h1>{{ room.name }}</h1>
+    <p>{{ room.description }}</p>
+    <hr />
 
-<p>@{{ room.host }}</p>
-<h1>{{ room.name }}</h1>
-<hr>
+    <div class="messsage-wrapper">
+      <h3>Conversations</h3>
+      <hr />
+      {% for message in room_messages%}
+      <small>@{{message.user}}</small> |
+      <small>{{message.created | timesince}} ago</small>
+      {% if request.user == message.user %}
+      | <a href="{% url "delete-message" message.id %}">Delete</a>
+      {% endif %}
+      <p>{{message}}</p>
+      <hr />
+      {% endfor %}
+    </div>
 
-<h3>Conversation</h3>
-<div class="messsage-wrapper">
-    {% for message in room_messages%}
-        <small>@{{message.user}}</small> | <small>{{message.created | timesince}} ago</small>
-        <p>{{message}}</p>
+    {% if request.user.is_authenticated %}
+    <div class="comment-form">
+      <form method="POST" action="">
+        {% csrf_token %}
+        <input
+          type="text"
+          name="body"
+          placeholder="Write your message here..."
+        />
+      </form>
+    </div>
+    {% endif %}
+  </div>
 
+  <div>
+    <h3>Participants</h3>
+    {% for user in  participants %}
+        <p>@{{ user.username }}</p>
     {% endfor %}
+    
+  </div>
 </div>
-
 
 {% endblock %}
